--- a/index.css
+++ b/index.css
@@ -1,18 +1,13 @@
-h1 
+/* h1 
 {
     color:blue;
-}
+} */
 
 p 
 {
     color:green;
 }
-.mark 
-{
-    color:rgb(135, 173, 28);
-}
-header p,
-header h1
+header 
 {
     color: yellow;
 }
