--- a/index.css
+++ b/index.css
@@ -1,13 +1,10 @@
-/* h1 
-{
-    color:blue;
-} */
-
-p 
-{
-    color:green;
+h1 {
+  color: blue;
 }
-header 
-{
-    color: yellow;
+
+p {
+  color: green;
+}
+header > p {
+  color: yellow;
 }
