--- a/index.css
+++ b/index.css
@@ -1,5 +1,9 @@
+body {
+  color: grey;
+}
+
 h1 {
-  color: blue;
+  color: red;
 }
 
 p {
@@ -7,4 +11,7 @@ p {
 }
 header > p {
   color: yellow;
+}
+header ~ p {
+  color: orange;
 }
