--- a/index.css
+++ b/index.css
@@ -10,11 +10,14 @@ p {
   color: green;
 }
 header > p {
-  color: yellow;
+  color: rgb(255, 255, 0);
 }
 header + p {
   color: orange;
 }
 a[href^="https"] {
   color: rgb(38, 165, 150);
+}
+p::before {
+  color: black;
 }
