--- a/index.css
+++ b/index.css
@@ -1,3 +1,7 @@
+@import url("https://fonts.googleapis.com/css?family=Shadows+Into+Light");
+* {
+  font-family: "Shadows Into Light", cursive;
+}
 body {
   color: grey;
 }
