--- a/index.css
+++ b/index.css
@@ -1,6 +1,8 @@
 @import url("https://fonts.googleapis.com/css?family=Shadows+Into+Light");
-* {
+html {
+
   font-family: "Shadows Into Light", cursive;
+  font-size: 32px;
 }
 body {
   color: grey;
@@ -13,6 +15,7 @@ p {
 }
 header > p {
   color: rgb(255, 255, 0);
+  font-size: 1.5rem;
 }
 header + p {
   color: orange;
@@ -36,4 +39,24 @@ p:hover {
 }
 a:visited {
   color: blue;
+}
+.navv{
+
+}
+.navv {
+    position: sticky;
+    background-color: black;
+    top: 0;
+    right: 0;
+    
+}
+.toolbar li{
+    
+    display: inline;
+    background-color: #EEE;
+    border: 1px solid;
+    border-color: #F3F3F3 #BBB #BBB #F3F3F3;
+    margin: 2px;
+    padding: .5em;
+    box-shadow: 15px 20px 15px rgba(0,0,0,0.5);
 }
