--- a/index.css
+++ b/index.css
@@ -45,18 +45,18 @@ p:hover {
 a:visited {
   color: blue;
 }
-.navv{
 
-}
 .navv {
-    position: sticky;
+    position: fixed;
     background-color: black;
+    width: 100%;
     top: 0;
-    right: 0;
+    height: 60px;
+    
     
 }
-.toolbar li{
-    
+ li{
+    position: sticky;
     display: inline;
     background-color: #EEE;
     border: 1px solid;
@@ -64,4 +64,8 @@ a:visited {
     margin: 2px;
     padding: .5em;
     box-shadow: 15px 20px 15px rgba(0,0,0,0.5);
+}
+.toolbar li{
+    position: sticky;
+    top: 60px;
 }
