--- a/index.css
+++ b/index.css
@@ -1,9 +1,11 @@
 @import url("https://fonts.googleapis.com/css?family=Shadows+Into+Light");
+@import url('https://fonts.googleapis.com/css?family=Allerta');
 html,
 body {
   height: 100%;
   width: 100%;
   margin: 0;
+  font-family: 'Allerta', sans-serif;
 }
 header {
   height: 50px;
@@ -79,4 +81,17 @@ div.carousel {
 }
 div.carousel p{
   position: absolute;
+  font-size: 60px;
+  padding-left: 50px;
+}
+p.bottom_carousel_first{
+  padding-top: 250px;
+}
+p.bottom_carousel_last{
+  padding-top: 400px;
+}
+article{
+  background-color: #444444;
+  font-size: 30px;
+  line-height: -50px;
 }
