--- a/index.css
+++ b/index.css
@@ -1,11 +1,11 @@
 @import url("https://fonts.googleapis.com/css?family=Shadows+Into+Light");
-@import url('https://fonts.googleapis.com/css?family=Allerta');
+@import url("https://fonts.googleapis.com/css?family=Allerta");
 html,
 body {
   height: 100%;
   width: 100%;
   margin: 0;
-  font-family: 'Allerta', sans-serif;
+  font-family: "Allerta", sans-serif;
 }
 header {
   height: 50px;
@@ -27,8 +27,8 @@ div.about_me {
   height: 50px;
   width: 200px;
 }
-a{
-  color:#898989;
+a {
+  color: #898989;
   text-decoration: none;
 }
 div.details {
@@ -81,21 +81,77 @@ div.carousel {
   height: 660px;
   background-image: url(img/concert.jpeg);
   font-size: 20px;
-  color:white;
+  color: white;
 }
-div.carousel p{
+div.carousel p {
   position: absolute;
   font-size: 60px;
   padding-left: 50px;
 }
-p.bottom_carousel_first{
+p.bottom_carousel_first {
   padding-top: 250px;
 }
-p.bottom_carousel_last{
+p.bottom_carousel_last {
   padding-top: 400px;
 }
-article{
+article {
+  color: #ebebeb;
+  padding-left: 20px;
+  line-height: 60px;
   background-color: #444444;
   font-size: 30px;
   line-height: -50px;
+}
+div.my_band {
+  position: relative;
+  background-color: #606060;
+}
+div.my_band > aside.left {
+  position: absolute;
+  left: 0;
+  width: 50%;
+  height: 200px;
+  background-color: #606060;
+  padding-left: 20px;
+  font-size: 30px;
+  color: #ebebeb;
+}
+div.my_band > aside.right {
+  position: absolute;
+  right: 0;
+  width: 50%;
+  height: 200px;
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+  background-image: url(img/rockonslogo.jpg);
+}
+div.my_band>aside.right > a[href="https://www.facebook.com/rockons.band/"] {
+  position: absolute;
+  background-image: url(img/fblogo.png);
+  background-size: 50px 50px;
+  height: 50px;
+  width: 50px;
+  left: 0;
+  bottom: 0;
+}
+div.my_band>aside.right > a[href="https://www.youtube.com/channel/UCJR6qE5x5T3QgCYodozj6FA/featured"] {
+  position: absolute;
+  background-image: url(img/youtubelogo.png);
+  background-size: 80px 50px;
+  background-repeat: no-repeat;
+  height: 50px;
+  width: 80px;
+  right: 0;
+  bottom: 0;
+}
+div.my_band>aside.right > a[href="https://www.instagram.com/rockons.lviv/"] {
+  position: absolute;
+  background-image: url(img/instalogo.png);
+  background-repeat: no-repeat;
+  background-size: 50px 50px;
+  height: 50px;
+  width: 50px;
+  left: 45%;
+
+  bottom: 0;
 }
