--- a/index.css
+++ b/index.css
@@ -103,14 +103,18 @@ article {
   line-height: -50px;
 }
 div.my_band {
-  position: relative;
+  position: absolute;
+  left: 0;
+  right: 0;
+  height: 260px;
+  width: 100%;
   background-color: #606060;
 }
 div.my_band > aside.left {
   position: absolute;
   left: 0;
   width: 50%;
-  height: 200px;
+  height: 100%;
   background-color: #606060;
   padding-left: 20px;
   font-size: 30px;
@@ -120,7 +124,7 @@ div.my_band > aside.right {
   position: absolute;
   right: 0;
   width: 50%;
-  height: 200px;
+  height: 100%;
   background-size: 100% 100%;
   background-repeat: no-repeat;
   background-image: url(img/rockonslogo.jpg);
