--- a/index.css
+++ b/index.css
@@ -8,12 +8,12 @@ body {
   font-family: "Allerta", sans-serif;
 }
 header {
-  height: 50px;
+  height: 6%;
 }
 header > nav {
   display: grid;
   grid-template-columns: 1fr;
-  height: 50px;
+  height: 100%;
   background-color: #424242;
 }
 div.toolbar {
@@ -29,7 +29,7 @@ div.buttons {
 div.about_me {
   vertical-align: middle;
   text-align: center;
-  line-height: 45px;
+  line-height: 210%;
 }
 a {
   color: #898989;
@@ -39,27 +39,27 @@ div.details {
   background-color: black;
   vertical-align: middle;
   text-align: center;
-  line-height: 45px;
+  line-height: 210%;
 }
 div.contacts {
   vertical-align: middle;
   text-align: center;
-  line-height: 45px;
+  line-height: 210%;
   border-right: 2px solid black;
 }
 div.name {
   position: absolute;
   vertical-align: middle;
   text-align: center;
-  line-height: 45px;
+  line-height: 210%;
   width: 200px;
-  right: 15%;
+  right: 20%;
 }
 div.drum_lessons {
   position: absolute;
   vertical-align: middle;
   text-align: center;
-  line-height: 20px;
+  line-height: 100%;
   padding-top: 5px;
   width: 100px;
   right: 10%;
@@ -67,8 +67,8 @@ div.drum_lessons {
 header > nav img {
   position: absolute;
   right: 0;
-  height: 50px;
-  width: 50px;
+  height: 6%;
+  width: 5%;
 }
 div.carousel {
   position: relative;
@@ -197,14 +197,7 @@ p.bottom_carousel_last {
   bottom: 15%;
   left:12%;
 }
-#details > div.image > div.line1 {
-  position: absolute;
-  top: 14%;
-  left: 25%;
-  width: 50%;
-  height: 1.5%;
-  background-color: black;
-}
+
 #details > div.image > div.circle1 {
   z-index: 1;
   position: absolute;
@@ -221,14 +214,7 @@ p.bottom_carousel_last {
   left: 17%;
   top: 3%;
 }
-#details > div.image > div.line2 {
-  position: absolute;
-  top: 14%;
-  left: 75%;
-  width: 0.5%;
-  height: 30%;
-  background-color: black;
-}
+
 #details > div.image > div.circle2 {
   z-index: 1;
   position: absolute;
@@ -242,24 +228,8 @@ p.bottom_carousel_last {
   border-radius: 50%;
   line-height: 2em;
   box-sizing: content-box;
-  left: 71%;
+  left: 70%;
   top: 40%;
-}
-#details > div.image > div.line3 {
-  position: absolute;
-  top: 50%;
-  left: 25%;
-  width: 50%;
-  height: 1.5%;
-  background-color: black;
-}
-#details > div.image > div.line4 {
-  position: absolute;
-  top: 50%;
-  left: 25%;
-  width: 0.5%;
-  height: 80px;
-  background-color: black;
 }
 #details > div.image > div.circle3 {
   z-index: 1;
@@ -275,5 +245,37 @@ p.bottom_carousel_last {
   line-height: 2em;
   box-sizing: content-box;
   left: 21%;
-  bottom: 12%;
+  bottom: 14%;
+}
+#details > div.image > div.line1 {
+  position: absolute;
+  top: 14%;
+  left: 25%;
+  width: 50%;
+  height: 1.9%;
+  background-color: black;
+}
+#details > div.image > div.line2 {
+  position: absolute;
+  top: 14%;
+  left: 75%;
+  width: 0.7%;
+  height: 30%;
+  background-color: black;
+}
+#details > div.image > div.line3 {
+  position: absolute;
+  top: 50%;
+  left: 25%;
+  width: 50%;
+  height: 1.5%;
+  background-color: black;
+}
+#details > div.image > div.line4 {
+  position: absolute;
+  top: 50%;
+  left: 25%;
+  width: 0.7%;
+  height: 20%;
+  background-color: black;
 }
