--- a/index.css
+++ b/index.css
@@ -31,6 +31,18 @@ div.about_me {
   text-align: center;
   line-height: 210%;
 }
+div.about_me:hover {
+  background-color: grey;
+}
+div.contacts:hover {
+  background-color: grey;
+}
+div.details:hover {
+  background-color: grey;
+}
+a:hover {
+  color:white;
+}
 a {
   color: #898989;
   text-decoration: none;
