--- a/index.css
+++ b/index.css
@@ -8,7 +8,7 @@ body {
   font-family: "Allerta", sans-serif;
 }
 header {
-  height: 6%;
+  height: 7%;
 }
 header > nav {
   display: grid;
@@ -79,15 +79,16 @@ div.name {
 }
 div.drum_lessons {
   position: absolute;
+  vertical-align: middle;
   text-align: center;
+  line-height: 150%;
   width: 10%;
   right: 10%;
-  top:-0.5%;
 }
 header > nav img {
   position: absolute;
   right: 0;
-  height: 6%;
+  height: 7%;
   width: 4%;
 }
 div.carousel {
