--- a/index.css
+++ b/index.css
@@ -94,7 +94,7 @@ header > nav img {
 div.carousel {
   text-align: center;
   position: relative;
-  height: 845px;
+  height: 93%;
   background-image: url(img/concert.jpeg);
   background-size: 100% 100%;
   font-size: 20px;
