--- a/index.css
+++ b/index.css
@@ -331,7 +331,7 @@ p.bottom_carousel_last {
   width: 100%;
   height: 600px;
   align-items: center;
-  justify-content: center;
+  justify-content: space-around;
 }
 #cards > div.card_first {
   height: 500px;
