--- a/index.css
+++ b/index.css
@@ -94,7 +94,7 @@ header > nav img {
 div.carousel {
   min-height: 650px;
   background-image: url(img/concert.jpeg);
-  background-size: 100% 100%;
+  background-size:cover;
   color: white;
 }
 div.carousel > div.text > p {
@@ -149,7 +149,7 @@ p.paragraph{
 #about_me > div.my_band > aside.right {
   position: relative;
   border-bottom: 5px solid black;
-  background-size: 100% 100%;
+  background-size: cover;
   background-repeat: no-repeat;
   background-image: url(img/rockonslogo.jpg);
 }
